Improve the liquid compatibility of JEI 实现JEI更好的液体兼容 (#4251)
* 实现JEI更加液体兼容

* 调整各种显示的物品流体到合适的位置